--- a/Index.html
+++ b/Index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1 style="align-items: center;">This is page for the Current affairs</h1>
+    <h3>prime minister narendra modi hold a major role in our union cabinet</h3>
 </body>
 </html>
