--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1 style="align-items: center;">This is page for the Current affairs</h1>
+    <h3>prime minister narendra modi is the boss</h3>
 </body>
 </html>
