--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1 style="align-items: center;">This is page for the Current affairs</h1>
     <h3>prime minister narendra modi is the boss</h3>
     <h4>we have great Home minister shri amit shah</h4>
+    <h1>Please follow me for daily current affairs</h1>
 </body>
 </html>
