--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
   <table class="table align-middle">
     <thead>
       <tr>
-        ...
+        Name of Ministry
       </tr>
     </thead>
     <tbody>
       <tr>
-        ...
+        Ministry
       </tr>
       <tr class="align-bottom">
-        ...
+        Details 
       </tr>
       <tr>
         <td>...</td>
