--- a/index.html
+++ b/index.html
@@ -21,29 +21,36 @@
     <a class="nav-link disabled" href="#">Contact Us</a>
   </li>
 </ul>
-<div class="table-responsive">
-  <table class="table align-middle">
-    <thead>
-      <tr>
-        Name of Ministry
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        Ministry
-      </tr>
-      <tr class="align-bottom">
-        Details 
-      </tr>
-      <tr>
-        <td>...</td>
-        <td>...</td>
-        <td class="align-top">This cell is aligned to the top.</td>
-        <td>...</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Sr.</th>
+      <th scope="col">Name of Ministry</th>
+      <th scope="col">Minister</th>
+      <th scope="col">Details</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Naredra modi ji</td>
+      <td>Ministry of Space and Science</td>
+      <td>from gujarat
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td colspan="2">Larry the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
