--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>Naredra modi ji</td>
-      <td>Ministry of Space and Science</td>
+      <td>Defence</td>
+      <td>Rajnath Singh ji</td>
       <td>from gujarat
       </td>
     </tr>
