--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a class="nav-link disabled" href="#">Contact Us</a>
   </li>
 </ul>
-<table class="table table-bordered border-primary mt-20">
+<table class="table table-bordered border-primary mt-5">
   <thead>
     <tr>
       <th scope="col">Sr.</th>
@@ -33,21 +33,22 @@
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>Defence</td>
-      <td>Rajnath Singh ji</td>
+      <td>Agriculture and Farmers welfare</td>
+      <td>Shivraj Singh Chouhan</td>
       <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit vitae laudantium tenetur, commodi atque praesentium unde, omnis mollitia obcaecati, impedit velit eum? Molestiae placeat doloribus consectetur saepe aspernatur. Molestiae unde quae laboriosam tempore omnis necessitatibus inventore eius culpa hic accusantium modi esse eaque totam enim recusandae atque expedita, architecto excepturi quisquam voluptatem autem adipisci. Iste harum optio fugiat quaerat architecto.
       </td>
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
+      <td>Chemicals and Fertilizers</td>
+      <td>Jagat Prakash Nadda</td>
+      <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis numquam facilis, dicta, doloribus debitis adipisci dolorum dolore cupiditate labore quasi vel asperiores amet soluta reiciendis nemo culpa ducimus suscipit quaerat? Eius placeat modi similique. Eligendi hic quaerat, vero quo perferendis dignissimos, aliquam dicta quos, error blanditiis veniam. Incidunt unde, a maxime nihil quis odit aspernatur?</td>
     </tr>
     <tr>
       <th scope="row">3</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
+      <td >Civil Aviation</td>
+      <td >Kinjarapu Ram Mohan Naidu</td>
+      <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste possimus, officiis nisi officia ea voluptates quo laudantium modi harum quibusdam perspiciatis sunt delectus, ullam consectetur repudiandae dolor a maiores. Hic, similique incidunt omnis aliquid itaque iure dolorum expedita, a eum sapiente dignissimos ipsum. Sit dolorum quaerat nemo consequuntur delectus deleniti.</td>
     </tr>
   </tbody>
 </table>
