--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a class="nav-link disabled" href="#">Contact Us</a>
   </li>
 </ul>
-<table class="table table-bordered border-primary mt-5 p-4">
+<table class="table table-bordered border-primary m-5">
   <thead>
     <tr>
       <th scope="col">Sr.</th>
