--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <a class="nav-link disabled" href="#">Contact Us</a>
   </li>
 </ul>
+<div>
 <table class="table table-bordered border-primary m-5">
   <thead>
     <tr>
@@ -52,6 +53,7 @@
     </tr>
   </tbody>
 </table>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
