--- a/index.html
+++ b/index.html
@@ -36,7 +36,19 @@
       <th scope="row">1</th>
       <td>Agriculture and Farmers welfare</td>
       <td>Shivraj Singh Chouhan</td>
-      <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit vitae laudantium tenetur, commodi atque praesentium unde, omnis mollitia obcaecati, impedit velit eum? Molestiae placeat doloribus consectetur saepe aspernatur. Molestiae unde quae laboriosam tempore omnis necessitatibus inventore eius culpa hic accusantium modi esse eaque totam enim recusandae atque expedita, architecto excepturi quisquam voluptatem autem adipisci. Iste harum optio fugiat quaerat architecto.
+      <td>
+        <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">Toggle top offcanvas</button>
+
+<div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasTopLabel">Offcanvas top</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    ...
+  </div>
+</div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit vitae laudantium tenetur, commodi atque praesentium unde, omnis mollitia obcaecati, impedit velit eum? Molestiae placeat doloribus consectetur saepe aspernatur. Molestiae unde quae laboriosam tempore omnis necessitatibus inventore eius culpa hic accusantium modi esse eaque totam enim recusandae atque expedita, architecto excepturi quisquam voluptatem autem adipisci. Iste harum optio fugiat quaerat architecto.
       </td>
     </tr>
     <tr>
