--- a/index.html
+++ b/index.html
@@ -37,19 +37,18 @@
       <td>Agriculture and Farmers welfare</td>
       <td>Shivraj Singh Chouhan</td>
       <td>
-        <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">Toggle top offcanvas</button>
+        <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">Details</button>
 
 <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
   <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="offcanvasTopLabel">Offcanvas top</h5>
+    <h5 class="offcanvas-title" id="offcanvasTopLabel">Details</h5>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
-  <div class="offcanvas-body">
-    ...
+    <div class="offcanvas-body">
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad labore, eum vero eaque expedita cumque ullam aperiam repudiandae facilis corporis nihil, doloribus quia totam. Vero ullam ad iusto ab odio ratione dolor delectus, sunt est corporis labore consequuntur, suscipit aliquam quae laboriosam expedita quidem animi reiciendis totam id facilis, maiores facere. Deleniti, consequatur. Voluptas, porro!
+    </div>
   </div>
-</div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit vitae laudantium tenetur, commodi atque praesentium unde, omnis mollitia obcaecati, impedit velit eum? Molestiae placeat doloribus consectetur saepe aspernatur. Molestiae unde quae laboriosam tempore omnis necessitatibus inventore eius culpa hic accusantium modi esse eaque totam enim recusandae atque expedita, architecto excepturi quisquam voluptatem autem adipisci. Iste harum optio fugiat quaerat architecto.
-      </td>
+  </td>
     </tr>
     <tr>
       <th scope="row">2</th>
