--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </li>
 </ul>
 <div>
-<table class="table table-bordered border-primary m-5 w-75">
+<table class="table table-bordered border-primary m-5">
   <thead>
     <tr>
       <th scope="col">Sr.</th>
