--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <td>Shivraj Singh Chouhan <b>name</b>
         <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr1" aria-controls="offcanvasTop">Details</button>
 
-<div class="offcanvas offcanvas-top" tabindex="-1" id="sr1" aria-labelledby="offcanvasTopLabel">
+<div class="offcanvas offcanvas-top h-50" tabindex="-1" id="sr1" aria-labelledby="offcanvasTopLabel">
   <div class="offcanvas-header">
     <h5 class="offcanvas-title" id="offcanvasTopLabel">Details</h5>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
