--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <th scope="row">1</th>
       <td>Agriculture and Farmers welfare</td>
       <td>Shivraj Singh Chouhan <b>name</b>
-        <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr1" aria-controls="offcanvasTop">Details</button>
+        <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr1" aria-controls="offcanvasTop">Details</button>
 
 <div class="offcanvas offcanvas-top h-50" tabindex="-1" id="sr1" aria-labelledby="offcanvasTopLabel">
   <div class="offcanvas-header">
