--- a/index.html
+++ b/index.html
@@ -34,18 +34,8 @@
     <tr>
       <th scope="row">1</th>
       <td>Agriculture and Farmers welfare</td>
-      <td>Shivraj Singh Chouhan <b>name</b>
+      <td>Shivraj Singh Chouhan 
         <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr1" aria-controls="offcanvasTop">Details</button>
-
-<div class="offcanvas offcanvas-top h-50" tabindex="-1" id="sr1" aria-labelledby="offcanvasTopLabel">
-  <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="offcanvasTopLabel">Details</h5>
-    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-  </div>
-    <div class="offcanvas-body">
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad labore, eum vero eaque expedita cumque ullam aperiam repudiandae facilis corporis nihil, doloribus quia totam. Vero ullam ad iusto ab odio ratione dolor delectus, sunt est corporis labore consequuntur, suscipit aliquam quae laboriosam expedita quidem animi reiciendis totam id facilis, maiores facere. Deleniti, consequatur. Voluptas, porro!
-    </div>
-  </div>
       </td>
       
     </tr>
@@ -63,6 +53,16 @@
   </tbody>
 </table>
 </div>
+
+<div class="offcanvas offcanvas-top h-50" tabindex="-1" id="sr1" aria-labelledby="offcanvasTopLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasTopLabel">Details</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+    <div class="offcanvas-body">
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad labore, eum vero eaque expedita cumque ullam aperiam repudiandae facilis corporis nihil, doloribus quia totam. Vero ullam ad iusto ab odio ratione dolor delectus, sunt est corporis labore consequuntur, suscipit aliquam quae laboriosam expedita quidem animi reiciendis totam id facilis, maiores facere. Deleniti, consequatur. Voluptas, porro!
+    </div>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
