--- a/index.html
+++ b/index.html
@@ -33,34 +33,45 @@
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>Agriculture and Farmers welfare</td>
+      <td>Agriculture and Farmers welfare
+        <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr11" aria-controls="offcanvasTop">Details</button>
+      </td>
       <td>Shivraj Singh Chouhan 
-        <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr1" aria-controls="offcanvasTop">Details</button>
+        <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr12" aria-controls="offcanvasTop">Details</button>
       </td>
       
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td>Chemicals and Fertilizers</td>
-      <td>Jagat Prakash Nadda</td>
+      <td>Chemicals and Fertilizers
+        <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr21" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td>Jagat Prakash Nadda
+        <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr22" aria-controls="offcanvasTop">Details</button>
+      </td>
       
     </tr>
     <tr>
       <th scope="row">3</th>
-      <td >Civil Aviation</td>
-      <td >Kinjarapu Ram Mohan Naidu</td>
+      <td >Civil Aviation
+        <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Kinjarapu Ram Mohan Naidu
+        <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
     </tr>
   </tbody>
 </table>
 </div>
-
-<div class="offcanvas offcanvas-top h-50" tabindex="-1" id="sr1" aria-labelledby="offcanvasTopLabel">
+<!-- THIS ALL ARE DISCRIPTIONS -->
+ 
+<div class="offcanvas offcanvas-top h-50" tabindex="-1" id="sr11" aria-labelledby="offcanvasTopLabel">
   <div class="offcanvas-header">
     <h5 class="offcanvas-title" id="offcanvasTopLabel">Details</h5>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
     <div class="offcanvas-body">
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad labore, eum vero eaque expedita cumque ullam aperiam repudiandae facilis corporis nihil, doloribus quia totam. Vero ullam ad iusto ab odio ratione dolor delectus, sunt est corporis labore consequuntur, suscipit aliquam quae laboriosam expedita quidem animi reiciendis totam id facilis, maiores facere. Deleniti, consequatur. Voluptas, porro!
+ THIS ALL ARE DETAILS FOR ONLY AGRICULTURAL MINISTRY
     </div>
   </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
