--- a/index.html
+++ b/index.html
@@ -34,30 +34,30 @@
     <tr>
       <th scope="row">1</th>
       <td>Agriculture and Farmers welfare
-        <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr11" aria-controls="offcanvasTop">Details</button>
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr11" aria-controls="offcanvasTop">Details</button>
       </td>
       <td>Shivraj Singh Chouhan 
-        <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr12" aria-controls="offcanvasTop">Details</button>
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr12" aria-controls="offcanvasTop">Details</button>
       </td>
       
     </tr>
     <tr>
       <th scope="row">2</th>
       <td>Chemicals and Fertilizers
-        <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr21" aria-controls="offcanvasTop">Details</button>
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr21" aria-controls="offcanvasTop">Details</button>
       </td>
       <td>Jagat Prakash Nadda
-        <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr22" aria-controls="offcanvasTop">Details</button>
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr22" aria-controls="offcanvasTop">Details</button>
       </td>
       
     </tr>
     <tr>
       <th scope="row">3</th>
       <td >Civil Aviation
-        <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
       </td>
       <td >Kinjarapu Ram Mohan Naidu
-        <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
       </td>
     </tr>
   </tbody>
