--- a/index.html
+++ b/index.html
@@ -49,10 +49,36 @@
       <td>Jagat Prakash Nadda
         <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr22" aria-controls="offcanvasTop">Details</button>
       </td>
-      
     </tr>
     <tr>
       <th scope="row">3</th>
+      <td >Civil Aviation
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Kinjarapu Ram Mohan Naidu
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">4</th>
+      <td >Civil Aviation
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Kinjarapu Ram Mohan Naidu
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">5</th>
+      <td >Civil Aviation
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Kinjarapu Ram Mohan Naidu
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">6</th>
       <td >Civil Aviation
         <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
       </td>
