--- a/index.html
+++ b/index.html
@@ -61,28 +61,109 @@
     </tr>
     <tr>
       <th scope="row">4</th>
-      <td >Civil Aviation
+      <td >Coal
         <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
       </td>
-      <td >Kinjarapu Ram Mohan Naidu
+      <td >Gangapuram Kishan Reddy
         <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
       </td>
     </tr>
     <tr>
       <th scope="row">5</th>
-      <td >Civil Aviation
+      <td >Commerce and Industry
         <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
       </td>
-      <td >Kinjarapu Ram Mohan Naidu
+      <td >Piyush Goyal
         <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
       </td>
     </tr>
     <tr>
       <th scope="row">6</th>
-      <td >Civil Aviation
+      <td >Communications
         <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
       </td>
-      <td >Kinjarapu Ram Mohan Naidu
+      <td >Jyotiraditya Scindia
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">7</th>
+      <td >Consumer Affairs, Food and Public Distribution
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Prahlad Joshi
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">8</th>
+      <td >Corporate Affairs
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Nirmala Sitharaman
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">9</th>
+      <td >Culture
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Gajendra Singh Shekhawat
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">10</th>
+      <td >Defence
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Rajnath Singh
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">11</th>
+      <td >Development of North Eastern Region
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Jyotiraditya Scindia
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">12</th>
+      <td >Earth Science
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Narendra Modi
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">13</th>
+      <td >Education
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Dharmendra Pradhan
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">14</th>
+      <td >Electronics and Information Technology
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Ashwini Vaishnaw
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">15</th>
+      <td >Enviroment, Forest and Climate Change
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Bhupender Yadav
         <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
       </td>
     </tr>
