--- a/index.html
+++ b/index.html
@@ -167,6 +167,141 @@
         <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
       </td>
     </tr>
+    <tr>
+      <th scope="row">16</th>
+      <td >External Affairs
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Subrahmanyam Jaishankar
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">17</th>
+      <td >Finances
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Nirmala Sitharaman
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">18</th>
+      <td >Fisheries, Animal Husbandry and Dairying
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Lalan Singh
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">19</th>
+      <td >Food Processing Industries
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Chirag Paswan
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">20</th>
+      <td >Health and Family welfare
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Jagat  Prakash  Nadda
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">21</th>
+      <td >Heavy Industries and Public Enterprises
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >H.D. Kumaraswamy
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">22</th>
+      <td >Home Affairs
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Amit Shah
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">23</th>
+      <td >Housing and Urban Affairs
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Manohar Lal Khattar
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">24</th>
+      <td >Information and Broadcasting
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Ashwini Vaishnaw
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">25</th>
+      <td >Jal Shakti
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Chandrakant Raghunath Patil
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">26</th>
+      <td >Labour and Employment
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Mansukh L. Mandaviya
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">27</th>
+      <td >Law and Justice
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Arjun Ram Meghwal
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">28</th>
+      <td >Micro, Small and Medium Enterprises
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Jitan Ram Manjhi
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">29</th>
+      <td >Mines
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Gangapuram Kishan Reddy
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">30</th>
+      <td >Minority Affairs
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Kiren Rijiju
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
   </tbody>
 </table>
 
