--- a/index.html
+++ b/index.html
@@ -302,6 +302,186 @@
         <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
       </td>
     </tr>
+    <tr>
+      <th scope="row">31</th>
+      <td >New and Renewable Energy
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Prahlad Joshi
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">32</th>
+      <td >Panchayati Raj
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Lalan Singh
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">33</th>
+      <td >Parliamentary Affairs
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Kiren Rijiju
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">34</th>
+      <td >Personnel, Public Grievances and Pension 
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Narendra Modi
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">35</th>
+      <td >Petroleum and Natural Gas
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Hardeep Singh Puri
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">36</th>
+      <td >Power
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Manohar Lal Khattar
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">37</th>
+      <td >Railways
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Ashwini Vaishnaw
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">38</th>
+      <td >Road Transport and Highways
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Nitin Gadkari
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">39</th>
+      <td >Rural Development
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Shivraj Singh Chouhan
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">40</th>
+      <td >Science and Technology
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Jitendra Singh Rana
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">41</th>
+      <td >Shipping
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Sarbananda Sonowal
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">42</th>
+      <td >Skill Development and Entrepreneurship
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Jayant Chaudhary
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">43</th>
+      <td >Social Justice and Empowerment
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Virendra Kumar Khatik
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">44</th>
+      <td >Statistics and Programme Implementation
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Rao Inderjit Singh
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">45</th>
+      <td >Steel
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >H.D. Kumaraswamy
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">46</th>
+      <td >Textiles
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Giriraj Singh
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">47</th>
+      <td >Tourism
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Gajendra Singh Shekhawat
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">48</th>
+      <td >Tribal Affairs
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Jual Oram
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">49</th>
+      <td >Women and Child Development
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Annpurna Devi
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">50</th>
+      <td >Youth Affairs and Sports
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr31" aria-controls="offcanvasTop">Details</button>
+      </td>
+      <td >Mansukh L. Mandaviya
+        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr32" aria-controls="offcanvasTop">Details</button>
+      </td>
+    </tr>
   </tbody>
 </table>
 
