--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a class="nav-link disabled" href="#">Contact Us</a>
   </li>
 </ul>
-<div class="accordion" id="accordionExample">
+<div class="accordion m-5" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
