--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-        Accordion Item #1
+        Union Cabinet
       </button>
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample" style="">
       <div class="accordion-body">
-        <table class="table table-bordered border-primary m-5 w-75">
+        <table class="table table-bordered border-primary m-2">
           <thead>
             <tr>
               <th scope="col">Sr.</th>
