--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample" style="">
       <div class="accordion-body">
-        <table class="table table-bordered border-primary m-2">
+        <table class="table table-bordered border-primary">
           <thead>
             <tr>
               <th scope="col">Sr.</th>
