--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a class="nav-link disabled" href="#">Contact Us</a>
   </li>
 </ul>
-<h2 style="text-align: center;">Different Ministries and their Ministers</h2>
+<h2 style="text-align: center;" class="mt-5 mb-2">Different Ministries and their Ministers</h2>
 <div class="accordion m-5" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
