--- a/index.html
+++ b/index.html
@@ -491,6 +491,15 @@
                 <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr502" aria-controls="offcanvasTop">Details</button>
               </td>
             </tr>
+            <tr>
+              <th scope="row">51</th>
+              <td >Co-Operation
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr511" aria-controls="offcanvasTop">Details</button>
+              </td>
+              <td >Amit Shah
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr512" aria-controls="offcanvasTop">Details</button>
+              </td>
+            </tr>
           </tbody>
         </table>
         
@@ -963,6 +972,15 @@
               </td>
               <td >Raksha Khadse
                 <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr502s" aria-controls="offcanvasTop">Details</button>
+              </td>
+            </tr>
+            <tr>
+              <th scope="row">51</th>
+              <td >Co-Operation
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr511" aria-controls="offcanvasTop">Details</button>
+              </td>
+              <td >Krishna Pal Gurjar <strong>AND</strong> Murlidhar Mohol
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr512s" aria-controls="offcanvasTop">Details</button>
               </td>
             </tr>
           </tbody>
