--- a/about.html
+++ b/about.html
@@ -12,13 +12,13 @@
           <a class="nav-link active" aria-current="page" href="#">Sign Up/Login Up</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Affairs</a>
+          <a class="nav-link" href="affair.html">Affairs</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link" href="about.html">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Contact Us</a>
+          <a class="nav-link disabled" href="contact.html">Contact Us</a>
         </li>
       </ul>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>     
