--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <a class="nav-link active" aria-current="page" href="#">Sign Up/Login Up</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Static GK</a>
+    <a class="nav-link" href="affair.html">Static GK</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">About Us</a>
+    <a class="nav-link" href="about.html">About Us</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link disabled" href="#">Contact Us</a>
+    <a class="nav-link disabled" href="contact.html">Contact Us</a>
   </li>
 </ul>
 
