--- a/affair.html
+++ b/affair.html
@@ -9,7 +9,7 @@
 <body>
     <ul class="nav nav-pills nav-fill bg-secondary-subtle">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Sign Up/Login Up</a>
+          <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="affair.html">Static GK</a>
