--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>    
     <ul class="nav nav-pills nav-fill bg-secondary-subtle">
   <li class="nav-item">
-    <a class="nav-link" aria-current="page" href="index.html">Home</a>
+    <a class="nav-link" aria-current="page" href="\">Home</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="affair.html">Static GK</a>
