--- a/affair.html
+++ b/affair.html
@@ -990,7 +990,7 @@
   </div>
 </div>
   <h2>G20 Meeting in Brasil</h2>
-  <div class="accordion" id="accordionExample">
+  <div class="accordion" id="accordionExample1">
     <div class="accordion-item">
       <h2 class="accordion-header">
         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
