--- a/affair.html
+++ b/affair.html
@@ -989,8 +989,8 @@
     </div>
   </div>
 </div>
-  <h2>G20 Meeting in Brasil</h2>
-  <div class="accordion" id="accordionExample1">
+  <h2 style="text-align: center;">G20 Meeting in Brasil</h2>
+  <div class="accordion  m-5" id="accordionExample1">
     <div class="accordion-item">
       <h2 class="accordion-header">
         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne1" aria-expanded="true" aria-controls="collapseOne">
