--- a/affair.html
+++ b/affair.html
@@ -994,10 +994,22 @@
     <div class="accordion-item">
       <h2 class="accordion-header">
         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne1" aria-expanded="true" aria-controls="collapseOne">
-          G20 Members and their Leader's
+         About G20 
         </button>
       </h2>
       <div id="collapseOne1" class="accordion-collapse collapse show" data-bs-parent="#accordionExample1">
+        <div class="accordion-body">
+         G20 is group of 20 Members of world
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo1" aria-expanded="false" aria-controls="collapseTwo">
+          G20 Members and their Leader's
+        </button>
+      </h2>
+      <div id="collapseTwo1" class="accordion-collapse collapse" data-bs-parent="#accordionExample1">
         <div class="accordion-body">
           <table class="table">
             <thead>
@@ -1025,18 +1037,6 @@
               </tr>
             </tbody>
           </table>
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo1" aria-expanded="false" aria-controls="collapseTwo">
-          Accordion Item #2
-        </button>
-      </h2>
-      <div id="collapseTwo1" class="accordion-collapse collapse" data-bs-parent="#accordionExample1">
-        <div class="accordion-body">
-          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
         </div>
       </div>
     </div>
