--- a/affair.html
+++ b/affair.html
@@ -1014,9 +1014,9 @@
           <table class="table">
             <thead>
               <tr>
-                <th scope="col">#</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
+                <th scope="col">Sr.</th>
+                <th scope="col">Country</th>
+                <th scope="col">Leader</th>
               </tr>
             </thead>
             <tbody>
