--- a/affair.html
+++ b/affair.html
@@ -999,7 +999,7 @@
       </h2>
       <div id="collapseOne1" class="accordion-collapse collapse show" data-bs-parent="#accordionExample1">
         <div class="accordion-body">
-         G20 is group of 20 Members of world
+         <strong>G20 is an Intergovermental forum comprising of 19  sovereign countries, the European Union,and the African Union.</strong><i>founded in 1999.</i> and Since 2008,it has convenced at least once a year.
         </div>
       </div>
     </div>
