--- a/affair.html
+++ b/affair.html
@@ -989,7 +989,7 @@
     </div>
   </div>
 </div>
-  <h2 style="text-align: center;">G20 Meeting in Brasil</h2>
+  <h2 style="text-align: center;">G20 Meeting in Brazil</h2>
   <div class="accordion  m-5" id="accordionExample1">
     <div class="accordion-item">
       <h2 class="accordion-header">
