--- a/affair.html
+++ b/affair.html
@@ -993,7 +993,7 @@
   <div class="accordion  m-5" id="accordionExample1">
     <div class="accordion-item">
       <h2 class="accordion-header">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne1" aria-expanded="true" aria-controls="collapseOne">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne1" aria-expanded="false" aria-controls="collapseOne">
          About G20 
         </button>
       </h2>
