--- a/affair.html
+++ b/affair.html
@@ -997,7 +997,7 @@
          About G20 
         </button>
       </h2>
-      <div id="collapseOne1" class="accordion-collapse collapse show" data-bs-parent="#accordionExample1">
+      <div id="collapseOne1" class="accordion-collapse collapse" data-bs-parent="#accordionExample1">
         <div class="accordion-body">
          <strong>G20 is an Intergovermental forum comprising of 19 sovereign countries, the European Union, and the African Union.</strong><i>founded in 1999.</i>Since 2008, it has convenced at least once a year.
         </div>
