--- a/affair.html
+++ b/affair.html
@@ -12,7 +12,7 @@
           <a class="nav-link" href="./">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="affair.html">Static GK</a>
+          <a class="nav-link" href="affair.html">Affairs</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="about.html">About Us</a>
