--- a/affair.html
+++ b/affair.html
@@ -29,9 +29,9 @@
         Union Cabinet
       </button>
     </h2>
-    <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample" style="">
+    <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <table class="table table-bordered border-primary">
+        <table class="table table-bordered">
           <thead>
             <tr>
               <th scope="col">Sr.</th>
@@ -512,9 +512,9 @@
         Minister of State
       </button>
     </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample" style="">
+    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <table class="table table-bordered border-primary">
+        <table class="table table-bordered">
           <thead>
             <tr>
               <th scope="col">Sr.</th>
