--- a/affair.html
+++ b/affair.html
@@ -514,7 +514,7 @@
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <table class="table table-bordered">
+        <table class="table">
           <thead>
             <tr>
               <th scope="col">Sr.</th>
@@ -1032,7 +1032,7 @@
               </tr>
               <tr>
                 <th scope="row">3</th>
-                <td colspan="2">Larry the Bird</td>
+                <td >Larry the Bird</td>
                 <td>@twitter</td>
               </tr>
             </tbody>
