--- a/affair.html
+++ b/affair.html
@@ -514,7 +514,7 @@
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <table class="table">
+        <table class="table table-bordered border-primary">
           <thead>
             <tr>
               <th scope="col">Sr.</th>
