--- a/affair.html
+++ b/affair.html
@@ -31,7 +31,7 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <table class="table table-bordered">
+        <table class="table table-bordered border-primary">
           <thead>
             <tr>
               <th scope="col">Sr.</th>
