--- a/affair.html
+++ b/affair.html
@@ -1011,6 +1011,7 @@
       </h2>
       <div id="collapseTwo1" class="accordion-collapse collapse" data-bs-parent="#accordionExample1">
         <div class="accordion-body">
+          <!-- for buttons in tables(detail button) #sra11 starting here we added a from previous -->
           <table class="table">
             <thead>
               <tr>
@@ -1022,18 +1023,30 @@
             <tbody>
               <tr>
                 <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
+                <td>Argentina
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra11" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Javier Milei
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra12" aria-controls="offcanvasTop">Details</button>
+                </td>
               </tr>
               <tr>
                 <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
+                <td>Australia
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra21" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Anthony Albanese
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra22" aria-controls="offcanvasTop">Details</button>
+                </td>
               </tr>
               <tr>
                 <th scope="row">3</th>
-                <td >Larry the Bird</td>
-                <td>@twitter</td>
+                <td >Brazil
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra31" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Luzi Inacio Lula Da Silva
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra32" aria-controls="offcanvasTop">Details</button>
+                </td>
               </tr>
             </tbody>
           </table>
